<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alivc_voicecall_color_text_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/alivc_voicecall_iv_back"
        android:layout_marginLeft="@dimen/alivc_voicecall_padding_20"
        android:layout_marginTop="@dimen/alivc_voicecall_margin_36"
        android:src="@drawable/back"
        android:layout_width="@dimen/alivc_voicecall_height_titlebar_24"
        android:layout_height="@dimen/alivc_voicecall_height_titlebar_24"/>

    <ImageView
        android:layout_centerHorizontal="true"
        android:scaleType="centerInside"
        android:id="@+id/alirtc_audioliveroom_iv_logo_bg"
        android:background="@drawable/alivc_voicecall_bg_logo_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:id="@+id/alivc_voicecall_rl_login_layout_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alivc_voicecall_tv_title"
            android:layout_marginTop="@dimen/alivc_voicecall_padding_20"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alivc_voicecall_string_title_rtc"
            android:textColor="@color/alivc_voicecall_color_text_gray"
            android:textSize="@dimen/alivc_voicecall_size_text__20"
            />


        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="@dimen/alivc_voicecall_width_imageview_72"
            android:layout_below="@id/alivc_voicecall_tv_title"
            android:layout_centerHorizontal="true"
            app:hintTextAppearance="@style/hintTextAppearance"
            android:id="@+id/alivc_voicecall_textinputlayout_channelid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/alivc_voicecall_edittext_channelid"
                android:maxLines="1"
                android:textColor="@color/alivc_voicecall_color_text_gray"
                android:drawable="@drawable/alivc_voice_call_black_line_edit_bg_shape"
                android:textSize="@dimen/alivc_voicecall_size_text_14"
                android:hint="@string/alivc_voicecall_string_hint_room_num"
                android:layout_width="@dimen/alivc_voicecall_width_et_306"
                android:layout_height="@dimen/alivc_voicecall_width_selector_40" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/alivc_voicecall_tv_hint_channelid"
            android:layout_marginTop="@dimen/alivc_voicecall_margin_10"
            android:layout_below="@id/alivc_voicecall_textinputlayout_channelid"
            android:text="@string/alivc_voicecall_string_tips_room_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="center"
            android:enabled="true"
            android:textColor="@color/alivc_voicecall_color_text_white"
            android:id="@+id/alivc_voicecall_tv_begin_speak"
            android:layout_marginTop="@dimen/alivc_voicecall_margin_75"
            android:background="@drawable/alivc_voicecall_btn_bg_selector"
            android:layout_centerHorizontal="true"
            android:text="@string/alivc_voicecall_string_btn_start_voice_call"
            android:textSize="@dimen/alivc_voicecall_size_text_18"
            android:layout_below="@id/alivc_voicecall_tv_hint_channelid"
            android:layout_width="@dimen/alivc_voicecall_width_et_306"
            android:layout_height="@dimen/alivc_voicecall_height_tv_48"/>
    </RelativeLayout>
</RelativeLayout>
