<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alivc_voicecall_btn_drawerlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.aliyun.rtc.voicecall.view.TitleBar
            android:id="@+id/alivc_voicecall_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_voicecall_width_60" />

        <LinearLayout
            android:id="@+id/alivc_voicecall_ll_hint_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_voicecall_height_ll_44"
            android:layout_below="@id/alivc_voicecall_title_bar"
            android:background="@color/alivc_voicecall_color_bg_hint_timeout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alivc_voicecall_tv_hint_timeout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/alivc_voicecall_padding_20"
                android:text="@string/alivc_voicecall_string_hint_timeout"
                android:textColor="@color/alivc_voicecall_color_text_hint_timeout"
                android:textSize="@dimen/alivc_voicecall_size_text_14" />

            <ImageButton
                android:id="@+id/alivc_voicecall_ibn_close"
                android:layout_width="@dimen/alivc_voicecall_width_ibn_16"
                android:layout_height="@dimen/alivc_voicecall_width_ibn_16"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/alivc_voicecall_padding_20"
                android:background="@null"
                android:src="@mipmap/alivc_voice_call_btn_close" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/alivc_voicecall_width_selector_40"
            android:layout_marginTop="@dimen/alivc_voicecall_margin_150"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alivc_voicecall_iv_user1"
                android:layout_width="@dimen/alivc_voicecall_width_imageview_96"
                android:layout_height="@dimen/alivc_voicecall_width_imageview_96"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/alivc_voicecall_tv_user1_name"
                android:layout_width="@dimen/alivc_voicecall_width_tv_78"
                android:layout_height="@dimen/alivc_voicecall_height_tv_34"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/alivc_voicecall_margin_10"
                android:background="@drawable/alivc_voice_call_tv_user1_bg_shape"
                android:gravity="center"
                android:text="@string/alivc_voicecall_string_me"
                android:textColor="@color/alivc_voicecall_color_text_white"
                android:textSize="@dimen/alivc_voicecall_size_text_16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/alivc_voicecall_margin_150"
            android:layout_marginRight="@dimen/alivc_voicecall_width_selector_40"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/alivc_voicecall_iv_user2"
                android:layout_width="@dimen/alivc_voicecall_width_imageview_96"
                android:layout_height="@dimen/alivc_voicecall_width_imageview_96"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/alivc_voicecall_tv_user2_name"
                android:layout_width="@dimen/alivc_voicecall_width_tv_78"
                android:layout_height="@dimen/alivc_voicecall_height_tv_34"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/alivc_voicecall_margin_10"
                android:gravity="center"
                android:text="@string/alivc_voicecall_string_user_unonline"
                android:textSize="@dimen/alivc_voicecall_size_text_16"
                android:textColor="@color/alivc_voicecall_color_text_white"
                android:visibility="invisible" />
        </LinearLayout>

        <TextView
            android:id="@+id/alivc_voicecall_tv_ring_off"
            android:layout_width="@dimen/alivc_voicecall_width_tv_68"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/alivc_voicecall_width_selector_40"
            android:drawableTop="@drawable/alivc_voice_call_ring_off"
            android:drawablePadding="@dimen/alivc_voicecall_margin_12"
            android:gravity="center"
            android:text="@string/alivc_voicecall_string_text_ring_off"
            android:textColor="@color/alivc_voicecall_color_text_white"
            android:textSize="@dimen/alivc_voicecall_size_text_12" />

        <TextView
            android:id="@+id/alivc_voicecall_tv_silent"
            android:layout_width="@dimen/alivc_voicecall_width_tv_68"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/alivc_voicecall_margin_45"
            android:layout_marginBottom="@dimen/alivc_voicecall_width_selector_40"
            android:layout_toLeftOf="@id/alivc_voicecall_tv_ring_off"
            android:drawableTop="@drawable/alivc_voice_call_mute_selector"
            android:drawablePadding="@dimen/alivc_voicecall_margin_12"
            android:gravity="center"
            android:text="@string/alivc_voicecall_string_text_silent"
            android:textColor="@color/alivc_voicecall_color_text_white"
            android:textSize="@dimen/alivc_voicecall_size_text_12" />

        <TextView
            android:id="@+id/alivc_voicecall_tv_loud_speaker"
            android:layout_width="@dimen/alivc_voicecall_width_tv_68"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/alivc_voicecall_margin_45"
            android:layout_marginBottom="@dimen/alivc_voicecall_width_selector_40"
            android:layout_toRightOf="@id/alivc_voicecall_tv_ring_off"
            android:drawableTop="@drawable/alivc_voice_call_handsfree_selector"
            android:drawablePadding="@dimen/alivc_voicecall_margin_12"
            android:gravity="center"
            android:text="@string/alivc_voicecall_string_text_loud_speaker"
            android:textColor="@color/alivc_voicecall_color_text_white"
            android:textSize="@dimen/alivc_voicecall_size_text_12" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/alivc_voicecall_tv_experience_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/alivc_voicecall_margin_6"
            android:background="@drawable/alivc_voice_call_bg_toast_shape"
            android:layout_above="@id/alivc_voicecall_tv_ring_off"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/alivc_voicecall_margin_94"
            android:textColor="@color/alivc_voicecall_color_text_white"
            android:textSize="@dimen/alivc_voicecall_size_text__20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/alivc_voicecall_tv_waiting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/alivc_voicecall_margin_6"
            android:background="@drawable/alivc_voice_call_bg_toast_shape"
            android:text="@string/alivc_voicecall_string_text_waitting"
            android:layout_above="@id/alivc_voicecall_tv_ring_off"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/alivc_voicecall_margin_64"
            android:textColor="@color/alivc_voicecall_color_text_white"
            android:textSize="@dimen/alivc_voicecall_size_text_14" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/alivc_voicecall_ll_left_drawlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:focusable="true"
        android:clickable="true"
        android:layout_gravity="end"
        android:orientation="vertical">

        <com.aliyun.rtc.voicecall.view.TitleBar
            android:id="@+id/alivc_voicecall_left_drawlayout_title_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_voicecall_width_60" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_voicecall_width_60"
            android:layout_marginTop="@dimen/alivc_voicecall_padding_20"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/alivc_voicecall_padding_20"
            android:text="@string/alivc_voicecall_string_text_bg"
            android:textColor="@color/alivc_voicecall_color_text_gray"
            android:textSize="@dimen/alivc_voicecall_size_text_13" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alivc_voicecall_rcy_bg"
            android:layout_marginLeft="@dimen/alivc_voicecall_margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/alivc_voicecall_width_60"
            android:layout_marginTop="@dimen/alivc_voicecall_padding_20"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/alivc_voicecall_padding_20"
            android:text="@string/alivc_voicecall_string_text_bgm"
            android:textColor="@color/alivc_voicecall_color_text_gray"
            android:textSize="@dimen/alivc_voicecall_size_text_13" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/alivc_voicecall_rcy_bgm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>